<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/root"
        android:padding="24dp"
        android:orientation="vertical"
        tools:context=".ui.dialogs.AddSubCategoryDialog">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            style="@style/Theme.Paddi.LightDarkTexts"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:text="@string/new_sub_category_dialog_title" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/select_category_name_prompt"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/category_selection_spinner"
                tools:listitem="@android:layout/simple_selectable_list_item"/>

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/subcategory_name_prompt"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:textSize="16sp"
                android:id="@+id/sub_category_name"
                android:background="@drawable/bg_edit_text"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/add_sub_category_btn"
                android:enabled="false"
                android:layout_gravity="end"
                android:text="@string/add_btn_text"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>