<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/root">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.dialogs.AddImagesDialog">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                style="@style/Theme.Paddi.LightDarkTexts"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:text="@string/add_images_dialog_title" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/destination_card"
                android:layout_width="match_parent"
                app:cardCornerRadius="8dp"
                android:layout_margin="4dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:text="@string/select_category_name_prompt"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/category_selection_spinner"
                        tools:listitem="@android:layout/simple_selectable_list_item"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:text="@string/select_sub_category_name_prompt"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/sub_category_selection_spinner"
                        tools:listitem="@android:layout/simple_selectable_list_item"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:id="@+id/continue_to_upload_btn"
                android:layout_gravity="end"
                android:text="@string/continue_btn"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:indeterminate="true"
            app:indicatorSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>