<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root"
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                style="@style/Theme.Paddi.LightDarkTexts"
                android:textStyle="bold"
                android:text="@string/delete_dialog_title_text" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/delete_is_dangerous_prompt"
                android:textStyle="italic"
                android:padding="4dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.dialogs.DeleteDialog">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:id="@+id/category_section">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_name_title_text"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/category_name"
                                android:padding="12dp"
                                android:textSize="16sp"
                                android:layout_weight="1"
                                tools:text="Category Name"/>
                            <com.google.android.material.button.MaterialButton
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                app:icon="@drawable/ic_delete"
                                android:enabled="false"
                                android:id="@+id/delete_category_btn"
                                android:alpha="0.4"
                                app:iconGravity="textEnd"
                                style="@style/Widget.MaterialComponents.Button.TextButton"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </com.google.android.material.card.MaterialCardView>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subcategories_title_text"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category_section"
                    android:id="@+id/sub_category_list_title"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sub_category_list_title"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_subcategories_delete_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>